4.5 bug fixes (#451)
* PLT-8353 - Channel dropdown overlapping button

* PLT-8362 - Changing profile popover position

* PLT-8328 - Ios chrome, can’t scroll on teams page

--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -19,11 +19,9 @@ body {
 .sticky {
     background: $white;
 
-    > .container-fluid {
-        display: flex;
+    > .channel-view {
         height: auto;
-        position: relative;
-        width: 100%;
+        padding: 0 15px;
     }
 
     .inner-wrap {
